k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-service
  labels:
    app: httpserver
spec:
  selector:
    app: httpserver
  ports:
  - name: httpserver-port
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
