k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpserver
spec:
  ingressClassName: nginx
  rules:
    - host: www.abc.com
      http:
        paths:
          - backend:
              service:
                name: httpserver
                port:
                  number: 80
            path: /
            pathType: Prefix
